Fixes image squishing at a specific resolution.

--- a/src/comp/Pages/welcomePage.css
+++ b/src/comp/Pages/welcomePage.css
@@ -36,7 +36,6 @@ img {
 
 @media screen and (orientation: landscape) and (max-height: 830px) {
   img {
-    height: 30rem;
     width: 30rem;
   }
 }
